# CSMAR-Data-MCP

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mcp.agent.config.example.json  pyproject.toml  test_csmar_raw.py
.github/workflows/: lint.yml  publish.yml
csmar_mcp/: __main__.py  client.py  models.py  presenters.py  runtime.py  server.py  test_api.py
csmar_mcp/core/: __init__.py  errors.py  types.py
csmar_mcp/infra/: __init__.py  csmar_gateway.py  state.py
csmar_mcp/services/: __init__.py  metadata.py  query.py
csmarapi/: CsmarService.py
docs/: agent-feedback.md
hooks/: post-commit  pre-commit  pre-push
scripts/: check.py
tests/: test_presenters.py  test_runtime.py  test_server_contracts.py  test_services.py
