[project]
name = "csmar-mcp"
version = "0.1.0"
description = "MCP server for querying CSMAR metadata and materializing downloads"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "pandas>=2.2.0,<3",
    "prettytable>=3.17.0",
    "urllib3>=2.6.3",
    "websocket-client>=1.9.0",
]

[project.scripts]
csmar-mcp = "csmar_mcp.server:main"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pyright>=1.1.380",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["csmar_mcp", "csmarapi"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["csmar_mcp", "tests"]
extend-exclude = ["csmarapi"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "N", "C4", "TID", "T20", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["csmar_mcp", "tests"]
exclude = ["csmarapi", "**/__pycache__"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportOptionalMemberAccess = "none"
reportCallIssue = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportMissingParameterType = "none"
reportUnknownParameterType = "none"
